// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Cart renders correctly if there are NO items in cart 1`] = `
.c0 {
  padding-top: 3rem;
  padding-bottom: 12rem;
}

.c2 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
}

.c3 {
  color: #008484;
  font-weight: 700;
  font-size: 1.8rem;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: none;
  background: none;
  border: 0;
  cursor: pointer;
}

.c3:focus {
  background-color: #ffbf47;
  outline: 4px solid #ffbf47;
  outline-offset: 0;
}

<article
  className="c0"
>
  <section
    className="c1"
  >
    <h1
      className="c2"
    >
      Cart (0)
    </h1>
    <CartItemsList
      items={Array []}
    />
    <button
      className="c3"
      onClick={[MockFunction]}
    >
      Put some items in cart!
    </button>
  </section>
</article>
`;

exports[`COMPONENT - Cart renders correctly if there are some items in cart 1`] = `
Array [
  <InfoBanner>
    You have received 
    <strong>
      free shipping
    </strong>
    !
  </InfoBanner>,
  .c0 {
  padding-top: 3rem;
  padding-bottom: 12rem;
}

.c2 {
  margin: 0;
  margin-bottom: 2rem;
  font-size: 3rem;
  font-weight: 700;
  line-height: 1;
}

.c1 {
  max-width: 100rem;
  padding: 0 2rem;
  margin: 0 auto;
}

<article
    className="c0"
  >
    <section
      className="c1"
    >
      <h1
        className="c2"
      >
        Cart (3)
      </h1>
      <CartItemsList
        items={
          Array [
            Object {
              "id": "64a673c2-59e3-11e9-8647-d663bd873d93",
              "imgUrl": "https://mosaic03.ztat.net/vgs/media/catalog_hd/LE/42/2T/01/0K/11/LE422T010-K11@8.1.jpg",
              "name": "RIDER JACKET - jeans jacket - dark blue",
              "price": Object {
                "discount": 12500,
                "regular": 24099,
              },
              "quantity": 3,
              "variants": Object {
                "color": "Dark Blue",
                "size": "46 Medium",
              },
            },
          ]
        }
      />
    </section>
    <OrderSummary />
    <NextStep
      label="Checkout"
      to="/checkout/delivery"
    />
  </article>,
]
`;
